feat: iniciando o desenvolvimento no modulo de restaurantes
